--- a/src/main/resources/templates/pedido-cancelado.html
+++ b/src/main/resources/templates/pedido-cancelado.html
@@ -1,9 +1,8 @@
 <html>
 <body style="font: 14px Arial, Helvetica, sans-serif">
-	<h1 style="color: green; font-size: 26px">Pedido confirmado!</h1>
+	<h1 style="color: red; font-size: 26px">Pedido cancelado!</h1>
 	
-	<p>${pedido.cliente.nome}, seu pedido foi confirmado pelo restaurante e já
-		está sendo preparado.</p>
+	<p>${pedido.cliente.nome}, seu pedido foi cancelado pelo restaurante.</p>
 	
 	<h2 style="font-size: 20px">${pedido.restaurante.nome}</h2>
 	
