--- a/src/main/resources/templates/pedido-entregue.html
+++ b/src/main/resources/templates/pedido-entregue.html
@@ -1,11 +1,12 @@
 <html>
 <body style="font: 14px Arial, Helvetica, sans-serif">
-	<h1 style="color: green; font-size: 26px">Pedido confirmado!</h1>
+	<h1 style="color: blue; font-size: 26px">Pedido entregue!</h1>
 	
-	<p>${pedido.cliente.nome}, seu pedido foi confirmado pelo restaurante e já
-		está sendo preparado.</p>
+	<p>${pedido.cliente.nome}, seu pedido foi com sucesso.</p>
 	
 	<h2 style="font-size: 20px">${pedido.restaurante.nome}</h2>
+	
+	<p>No endereço, ${pedido.endereco}.</p>
 	
 	<table width="100%" border="0" cellspacing="0" cellpadding="0"
 			style="max-width: 400px; color: #6F6F6F">
